# ilastik-conda-recipes

./: .gitignore  BUILD_NOTES.md  LICENSE.txt  README.md  binary-compatibility.txt  check_and_delete_git_repo.bat.in  common-vars-mingw.bat  common-vars.bat  common-vars.sh  conda-build-local.bat  conda-local.bat  create-linux-tarball.sh  create-osx-zip.sh  create-release-tarball.sh  create-tarball.sh  create_tarball.py  customization-of-conda-build.md  dos-tools.bat  ilastik-pins.yaml  ilastik-recipe-specs.yaml  pyqt-setup.bat
alabaster/: meta.yaml
ann/: bld.bat  build.sh  meta.yaml
argparse/: meta.yaml
armadillo/: bld.bat  build.sh  meta.yaml
armadillo-4.320.0/: armadillo-win.patch  meta.yaml
babel/: meta.yaml
blist/: meta.yaml
boost/: 1.60.0.patch  bld.bat  build.sh  meta.yaml
boost-1.55.0/: bld.bat  meta.yaml
build-utils/: compare_against_cloud.py  compare_versions.py  dependencies-to-json.py  environ-deps-to-png.sh  json-graph-to-dot.py
bzip2/: bld.bat  meta.yaml
bzip2-src-for-python/: meta.yaml
caffe/: bld.bat  meta.yaml  patch_caffe.patch
certifi/: meta.yaml
colorama/: meta.yaml
cplex-shared/: meta.yaml  post-link.sh  pre-unlink.sh  run_test.sh
ctrax/: build.sh  meta.yaml  setup.patch
cylemon/: build.sh  meta.yaml
cython/: bld.bat  meta.yaml
decorator/: meta.yaml
distribute/: meta.yaml
dlib/: CMakeLists.txt.patch  CMakeLists.txt.patch_2  bld.bat  build.sh  meta.yaml
docopt/: meta.yaml
docutils/: meta.yaml
dpct/: build.sh  meta.yaml
dvid/: build.sh  meta.yaml
dvid-viewer/: build.sh  meta.yaml
dvidsparkservices/: build.sh  meta.yaml
eigen/: bld.bat  meta.yaml
emulate_c99/: bld.bat  meta.yaml
faulthandler/: meta.yaml
feast/: build.sh  meta.yaml
feature_selection/: bld.bat  meta.yaml
fftw/: bld.bat  build.sh  fftw_install.cmake  meta.yaml  patch_fftw_win.py
fftw/cmake/: CMakeLists.txt  config.h
freetype/: bld.bat  meta.yaml
funcsigs/: meta.yaml
functools32/: meta.yaml
futures/: meta.yaml
gala/: build.sh  meta.yaml
gcc-4.8/: build.sh  meta.yaml  post-link.sh  remove-obsolete-libstdcxx.sh
gflags/: bld.bat  meta.yaml
glog/: bld.bat  meta.yaml
google-api-cpp-client/: build.sh  meta.yaml
greenlet/: meta.yaml
grin/: meta.yaml
gurobi-symlink/: meta.yaml  post-link.sh  pre-unlink.sh
h5py/: bld.bat  meta.yaml
hdf5/: bld.bat  meta.yaml
hytra/: meta.yaml
iconv/: bld.bat  meta.yaml
iiboost/: README  bld.bat  build.sh  isnan.patch  meta.yaml
ilastik-dependencies/: conda_build_config.yaml  meta.yaml
ilastik-deps-carving/: meta.yaml
ilastik-deps-multicut/: meta.yaml
ilastik-deps-pc/: meta.yaml
ilastik-deps-pc-headless/: meta.yaml
ilastik-deps-pc-iiboost/: meta.yaml
ilastik-deps-tracking/: meta.yaml
ilastik-everything/: bld.bat  build.sh  meta.yaml  run_test.sh
ilastik-everything-but-tracking/: bld.bat  build.sh  ilastik-version-check.bat  meta.yaml
ilastik-exe/: bld.bat  meta.yaml  run-ilastik.bat
ilastik-feature-selection/: meta.yaml
ilastik-launch/: build.sh  meta.yaml  run_ilastik.sh
ilastik-meta/: bld.bat  build.sh  meta.yaml
ilastik-meta-1.1.8/: meta.yaml  read-version.py
ilastik-meta-1.1.9/: bld.bat  meta.yaml
ilastik-meta-devel/: bld.bat  build.sh  ilastik-meta.pth.win  meta.yaml  post-link.bat  pre-unlink.bat  pre-unlink.bat.wip
ilastik-package/: bld.bat  ilastik.iss.in  meta.yaml  post-link.bat  read-version.py
ilastik-versions/: meta.yaml
ilastik-versions-1.1.8/: meta.yaml
ilastik-versions-1.1.9/: meta.yaml
ilastikrag/: meta.yaml
ilastiktools/: bld.bat  build.sh  meta.yaml
ilmbase/: bld.bat  meta.yaml
ipython/: meta.yaml
ipython_genutils/: meta.yaml
itk/: meta.yaml
itk-seg-conv-only/: bld.bat  build.sh  meta.yaml
jansson/: build.sh  meta.yaml
jinja2/: meta.yaml
jpeg/: bld.bat  meta.yaml
jsoncpp/: build.sh  meta.yaml
jsonschema/: meta.yaml
jupyter_client/: meta.yaml
jupyter_core/: meta.yaml
lemon/: 0001-fix-build-error-with-clang-4.patch  bld.bat  build.sh  conda_build_config.yaml  meta.yaml
libcamiface/: build.sh  meta.yaml
libdvid-cpp/: build.sh  meta.yaml
libgcc/: meta.yaml  post-link.sh  remove-obsolete-libstdcxx.sh
libpng/: bld.bat  meta.yaml
libtiff/: bld.bat  meta.yaml  tiff_install.cmake
libxml2/: bld.bat  meta.yaml
lmdb/: bld.bat  meta.yaml
logilab_astng/: meta.yaml
logilab_common/: meta.yaml
lowtis/: build.sh  meta.yaml  run_test.sh
lz4/: build.sh  meta.yaml
mamutexport/: meta.yaml
markupsafe/: meta.yaml
matplotlib/: bld.bat  meta.yaml
mingw/: bld.bat  common-vars-mingw.bat.in  meta.yaml
mingw-for-msvc/: bld.bat  common-vars-mingw.bat.in  meta.yaml
mingw-for-msvc-build/: meta.yaml  post-link.bat
mitoolbox/: meta.yaml
mlpack/: bld.bat  build.sh  meta.yaml  mlpack-win.patch
mock/: meta.yaml
motmot.flymovieformat/: meta.yaml
motmot.imops/: meta.yaml
motmot.ufmf/: meta.yaml
motmot.wxvalidatedtext/: meta.yaml
motmot.wxvideo/: meta.yaml
multi-hypotheses-tracking/: build.sh  meta.yaml
nasm/: bld.bat  meta.yaml
nbformat/: meta.yaml
networkx/: meta.yaml
neuroproof/: build.sh  meta.yaml  run_test.sh
neutu/: build.sh  meta.yaml
neutu-alpha/: build.sh  meta.yaml
neutu-debug/: build.sh  meta.yaml
nose/: meta.yaml
nose-1.2.1/: meta.yaml
notebook/: meta.yaml
numpy/: bld.bat  meta.yaml  patch_numpy.patch  site.cfg.in
numpy-1.7.0/: meta.yaml  patch_numpy.patch
numpy-alloc-hook/: build.sh  meta.yaml
old-notes/: BUILD_NOTES.md
openblas/: bld.bat  meta.yaml
openblas-0.2.5/: bld.bat  meta.yaml
opencv/: build.sh  meta.yaml
openexr/: bld.bat  meta.yaml
opengm/: README  README.md  bld.bat  build.sh  meta.yaml  post-link-with-cplex.sh
opengm-2.3.4/: meta.yaml
opengm-learning/: bld.bat  meta.yaml  opengm-external-download.patch
opengm-structured-learning/: build.sh  meta.yaml
opengm-structured-learning-headers/: bld.bat  build.sh  conda_build_config.yaml  meta.yaml
opengm-with-cplex/: bld.bat  meta.yaml
openssl/: meta.yaml
openssl-src-for-python/: bld.bat  meta.yaml
pandas/: meta.yaml
scipy-0.16.0/no_error_box/: CMakeLists.txt
(+312 files in other folders)
