cmake_minimum_required(VERSION 2.6)

##################################################
#
#     basic initializations
#
##################################################

PROJECT(fftw)

SET(FFTW_VERSION 3.3)

ADD_DEFINITIONS(-DFFTW_DLL -DHAVE_AVX=1 -DWIN64 -D_WIN64 -D_USRDLL)

SET(CMAKE_C_FLAGS "/arch:AVX ${CMAKE_C_FLAGS}")

INCLUDE_DIRECTORIES(
    ${PROJECT_SOURCE_DIR}
    ${PROJECT_SOURCE_DIR}/api
    ${PROJECT_SOURCE_DIR}/kernel
    ${PROJECT_SOURCE_DIR}/dft
    ${PROJECT_SOURCE_DIR}/dft/simd
    ${PROJECT_SOURCE_DIR}/dft/scalar
    ${PROJECT_SOURCE_DIR}/rdft
    ${PROJECT_SOURCE_DIR}/rdft/simd
    ${PROJECT_SOURCE_DIR}/rdft/scalar
    ${PROJECT_SOURCE_DIR}/reodft
    ${PROJECT_SOURCE_DIR}/simd-support
    ${PROJECT_SOURCE_DIR}/threads
)

set(SOURCES
    ${PROJECT_SOURCE_DIR}/api/apiplan.c
    ${PROJECT_SOURCE_DIR}/api/configure.c
    ${PROJECT_SOURCE_DIR}/api/execute-dft-c2r.c
    ${PROJECT_SOURCE_DIR}/api/execute-dft-r2c.c
    ${PROJECT_SOURCE_DIR}/api/execute-dft.c
    ${PROJECT_SOURCE_DIR}/api/execute-r2r.c
    ${PROJECT_SOURCE_DIR}/api/execute-split-dft-c2r.c
    ${PROJECT_SOURCE_DIR}/api/execute-split-dft-r2c.c
    ${PROJECT_SOURCE_DIR}/api/execute-split-dft.c
    ${PROJECT_SOURCE_DIR}/api/execute.c
    ${PROJECT_SOURCE_DIR}/api/export-wisdom-to-file.c
    ${PROJECT_SOURCE_DIR}/api/export-wisdom-to-string.c
    ${PROJECT_SOURCE_DIR}/api/export-wisdom.c
    ${PROJECT_SOURCE_DIR}/api/f77api.c
    ${PROJECT_SOURCE_DIR}/api/flops.c
    ${PROJECT_SOURCE_DIR}/api/forget-wisdom.c
    ${PROJECT_SOURCE_DIR}/api/import-system-wisdom.c
    ${PROJECT_SOURCE_DIR}/api/import-wisdom-from-file.c
    ${PROJECT_SOURCE_DIR}/api/import-wisdom-from-string.c
    ${PROJECT_SOURCE_DIR}/api/import-wisdom.c
    ${PROJECT_SOURCE_DIR}/api/malloc.c
    ${PROJECT_SOURCE_DIR}/api/map-r2r-kind.c
    ${PROJECT_SOURCE_DIR}/api/mapflags.c
    ${PROJECT_SOURCE_DIR}/api/mkprinter-str.c
    ${PROJECT_SOURCE_DIR}/api/mkprinter-file.c
    ${PROJECT_SOURCE_DIR}/api/mktensor-iodims.c
    ${PROJECT_SOURCE_DIR}/api/mktensor-iodims64.c
    ${PROJECT_SOURCE_DIR}/api/mktensor-rowmajor.c
    ${PROJECT_SOURCE_DIR}/api/plan-dft-1d.c
    ${PROJECT_SOURCE_DIR}/api/plan-dft-2d.c
    ${PROJECT_SOURCE_DIR}/api/plan-dft-3d.c
    ${PROJECT_SOURCE_DIR}/api/plan-dft-c2r-1d.c
    ${PROJECT_SOURCE_DIR}/api/plan-dft-c2r-2d.c
    ${PROJECT_SOURCE_DIR}/api/plan-dft-c2r-3d.c
    ${PROJECT_SOURCE_DIR}/api/plan-dft-c2r.c
    ${PROJECT_SOURCE_DIR}/api/plan-dft-r2c-1d.c
    ${PROJECT_SOURCE_DIR}/api/plan-dft-r2c-2d.c
    ${PROJECT_SOURCE_DIR}/api/plan-dft-r2c-3d.c
    ${PROJECT_SOURCE_DIR}/api/plan-dft-r2c.c
    ${PROJECT_SOURCE_DIR}/api/plan-dft.c
    ${PROJECT_SOURCE_DIR}/api/plan-guru-dft-c2r.c
    ${PROJECT_SOURCE_DIR}/api/plan-guru-dft-r2c.c
    ${PROJECT_SOURCE_DIR}/api/plan-guru-dft.c
    ${PROJECT_SOURCE_DIR}/api/plan-guru-r2r.c
    ${PROJECT_SOURCE_DIR}/api/plan-guru-split-dft-c2r.c
    ${PROJECT_SOURCE_DIR}/api/plan-guru-split-dft-r2c.c
    ${PROJECT_SOURCE_DIR}/api/plan-guru-split-dft.c
    ${PROJECT_SOURCE_DIR}/api/plan-guru64-dft-c2r.c
    ${PROJECT_SOURCE_DIR}/api/plan-guru64-dft-r2c.c
    ${PROJECT_SOURCE_DIR}/api/plan-guru64-dft.c
    ${PROJECT_SOURCE_DIR}/api/plan-guru64-r2r.c
    ${PROJECT_SOURCE_DIR}/api/plan-guru64-split-dft-c2r.c
    ${PROJECT_SOURCE_DIR}/api/plan-guru64-split-dft-r2c.c
    ${PROJECT_SOURCE_DIR}/api/plan-guru64-split-dft.c
    ${PROJECT_SOURCE_DIR}/api/plan-many-dft-c2r.c
    ${PROJECT_SOURCE_DIR}/api/plan-many-dft-r2c.c
    ${PROJECT_SOURCE_DIR}/api/plan-many-dft.c
    ${PROJECT_SOURCE_DIR}/api/plan-many-r2r.c
    ${PROJECT_SOURCE_DIR}/api/plan-r2r-1d.c
    ${PROJECT_SOURCE_DIR}/api/plan-r2r-2d.c
    ${PROJECT_SOURCE_DIR}/api/plan-r2r-3d.c
    ${PROJECT_SOURCE_DIR}/api/plan-r2r.c
    ${PROJECT_SOURCE_DIR}/api/print-plan.c
    ${PROJECT_SOURCE_DIR}/api/rdft2-pad.c
    ${PROJECT_SOURCE_DIR}/api/the-planner.c
    ${PROJECT_SOURCE_DIR}/api/version.c
    ${PROJECT_SOURCE_DIR}/dft/bluestein.c
    ${PROJECT_SOURCE_DIR}/dft/buffered.c
    ${PROJECT_SOURCE_DIR}/dft/conf.c
    ${PROJECT_SOURCE_DIR}/dft/ct.c
    ${PROJECT_SOURCE_DIR}/dft/dftw-direct.c
    ${PROJECT_SOURCE_DIR}/dft/dftw-directsq.c
    ${PROJECT_SOURCE_DIR}/dft/dftw-generic.c
    ${PROJECT_SOURCE_DIR}/dft/dftw-genericbuf.c
    ${PROJECT_SOURCE_DIR}/dft/direct.c
    ${PROJECT_SOURCE_DIR}/dft/generic.c
    ${PROJECT_SOURCE_DIR}/dft/indirect-transpose.c
    ${PROJECT_SOURCE_DIR}/dft/indirect.c
    ${PROJECT_SOURCE_DIR}/dft/kdft-dif.c
    ${PROJECT_SOURCE_DIR}/dft/kdft-difsq.c
    ${PROJECT_SOURCE_DIR}/dft/kdft-dit.c
    ${PROJECT_SOURCE_DIR}/dft/kdft.c
    ${PROJECT_SOURCE_DIR}/dft/nop.c
    ${PROJECT_SOURCE_DIR}/dft/plan.c
    ${PROJECT_SOURCE_DIR}/dft/problem.c
    ${PROJECT_SOURCE_DIR}/dft/rader.c
    ${PROJECT_SOURCE_DIR}/dft/rank-geq2.c
    ${PROJECT_SOURCE_DIR}/dft/scalar/codelets/codlist.c
    ${PROJECT_SOURCE_DIR}/dft/scalar/codelets/n1_10.c
    ${PROJECT_SOURCE_DIR}/dft/scalar/codelets/n1_11.c
    ${PROJECT_SOURCE_DIR}/dft/scalar/codelets/n1_12.c
    ${PROJECT_SOURCE_DIR}/dft/scalar/codelets/n1_13.c
    ${PROJECT_SOURCE_DIR}/dft/scalar/codelets/n1_14.c
    ${PROJECT_SOURCE_DIR}/dft/scalar/codelets/n1_15.c
    ${PROJECT_SOURCE_DIR}/dft/scalar/codelets/n1_16.c
    ${PROJECT_SOURCE_DIR}/dft/scalar/codelets/n1_2.c
    ${PROJECT_SOURCE_DIR}/dft/scalar/codelets/n1_20.c
    ${PROJECT_SOURCE_DIR}/dft/scalar/codelets/n1_25.c
    ${PROJECT_SOURCE_DIR}/dft/scalar/codelets/n1_3.c
    ${PROJECT_SOURCE_DIR}/dft/scalar/codelets/n1_32.c
    ${PROJECT_SOURCE_DIR}/dft/scalar/codelets/n1_4.c
    ${PROJECT_SOURCE_DIR}/dft/scalar/codelets/n1_5.c
    ${PROJECT_SOURCE_DIR}/dft/scalar/codelets/n1_6.c
    ${PROJECT_SOURCE_DIR}/dft/scalar/codelets/n1_64.c
    ${PROJECT_SOURCE_DIR}/dft/scalar/codelets/n1_7.c
    ${PROJECT_SOURCE_DIR}/dft/scalar/codelets/n1_8.c
    ${PROJECT_SOURCE_DIR}/dft/scalar/codelets/n1_9.c
    ${PROJECT_SOURCE_DIR}/dft/scalar/codelets/q1_2.c
    ${PROJECT_SOURCE_DIR}/dft/scalar/codelets/q1_3.c
    ${PROJECT_SOURCE_DIR}/dft/scalar/codelets/q1_4.c
    ${PROJECT_SOURCE_DIR}/dft/scalar/codelets/q1_5.c
    ${PROJECT_SOURCE_DIR}/dft/scalar/codelets/q1_6.c
    ${PROJECT_SOURCE_DIR}/dft/scalar/codelets/q1_8.c
    ${PROJECT_SOURCE_DIR}/dft/scalar/codelets/t1_10.c
    ${PROJECT_SOURCE_DIR}/dft/scalar/codelets/t1_12.c
    ${PROJECT_SOURCE_DIR}/dft/scalar/codelets/t1_15.c
    ${PROJECT_SOURCE_DIR}/dft/scalar/codelets/t1_16.c
    ${PROJECT_SOURCE_DIR}/dft/scalar/codelets/t1_2.c
    ${PROJECT_SOURCE_DIR}/dft/scalar/codelets/t1_20.c
    ${PROJECT_SOURCE_DIR}/dft/scalar/codelets/t1_25.c
    ${PROJECT_SOURCE_DIR}/dft/scalar/codelets/t1_3.c
    ${PROJECT_SOURCE_DIR}/dft/scalar/codelets/t1_32.c
    ${PROJECT_SOURCE_DIR}/dft/scalar/codelets/t1_4.c
    ${PROJECT_SOURCE_DIR}/dft/scalar/codelets/t1_5.c
    ${PROJECT_SOURCE_DIR}/dft/scalar/codelets/t1_6.c
    ${PROJECT_SOURCE_DIR}/dft/scalar/codelets/t1_64.c
    ${PROJECT_SOURCE_DIR}/dft/scalar/codelets/t1_7.c
    ${PROJECT_SOURCE_DIR}/dft/scalar/codelets/t1_8.c
    ${PROJECT_SOURCE_DIR}/dft/scalar/codelets/t1_9.c
    ${PROJECT_SOURCE_DIR}/dft/scalar/codelets/t2_10.c
    ${PROJECT_SOURCE_DIR}/dft/scalar/codelets/t2_16.c
    ${PROJECT_SOURCE_DIR}/dft/scalar/codelets/t2_20.c
    ${PROJECT_SOURCE_DIR}/dft/scalar/codelets/t2_25.c
    ${PROJECT_SOURCE_DIR}/dft/scalar/codelets/t2_32.c
    ${PROJECT_SOURCE_DIR}/dft/scalar/codelets/t2_4.c
    ${PROJECT_SOURCE_DIR}/dft/scalar/codelets/t2_5.c
    ${PROJECT_SOURCE_DIR}/dft/scalar/codelets/t2_64.c
    ${PROJECT_SOURCE_DIR}/dft/scalar/codelets/t2_8.c
    ${PROJECT_SOURCE_DIR}/dft/scalar/n.c
    ${PROJECT_SOURCE_DIR}/dft/scalar/t.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/codlist.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/genus.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/n1bv_10.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/n1bv_11.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/n1bv_12.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/n1bv_128.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/n1bv_13.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/n1bv_14.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/n1bv_15.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/n1bv_16.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/n1bv_2.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/n1bv_20.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/n1bv_25.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/n1bv_3.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/n1bv_32.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/n1bv_4.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/n1bv_5.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/n1bv_6.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/n1bv_64.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/n1bv_7.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/n1bv_8.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/n1bv_9.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/n1fv_10.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/n1fv_11.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/n1fv_12.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/n1fv_128.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/n1fv_13.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/n1fv_14.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/n1fv_15.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/n1fv_16.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/n1fv_2.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/n1fv_20.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/n1fv_25.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/n1fv_3.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/n1fv_32.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/n1fv_4.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/n1fv_5.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/n1fv_6.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/n1fv_64.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/n1fv_7.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/n1fv_8.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/n1fv_9.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/n2bv_10.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/n2bv_12.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/n2bv_14.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/n2bv_16.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/n2bv_2.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/n2bv_20.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/n2bv_32.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/n2bv_4.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/n2bv_6.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/n2bv_64.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/n2bv_8.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/n2fv_10.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/n2fv_12.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/n2fv_14.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/n2fv_16.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/n2fv_2.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/n2fv_20.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/n2fv_32.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/n2fv_4.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/n2fv_6.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/n2fv_64.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/n2fv_8.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/n2sv_16.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/n2sv_32.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/n2sv_4.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/n2sv_64.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/n2sv_8.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/q1bv_2.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/q1bv_4.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/q1bv_5.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/q1bv_8.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/q1fv_2.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/q1fv_4.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/q1fv_5.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/q1fv_8.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t1buv_10.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t1buv_2.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t1buv_3.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t1buv_4.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t1buv_5.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t1buv_6.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t1buv_7.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t1buv_8.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t1buv_9.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t1bv_10.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t1bv_12.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t1bv_15.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t1bv_16.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t1bv_2.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t1bv_20.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t1bv_25.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t1bv_3.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t1bv_32.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t1bv_4.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t1bv_5.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t1bv_6.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t1bv_64.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t1bv_7.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t1bv_8.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t1bv_9.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t1fuv_10.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t1fuv_2.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t1fuv_3.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t1fuv_4.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t1fuv_5.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t1fuv_6.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t1fuv_7.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t1fuv_8.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t1fuv_9.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t1fv_10.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t1fv_12.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t1fv_15.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t1fv_16.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t1fv_2.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t1fv_20.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t1fv_25.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t1fv_3.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t1fv_32.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t1fv_4.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t1fv_5.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t1fv_6.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t1fv_64.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t1fv_7.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t1fv_8.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t1fv_9.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t1sv_16.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t1sv_2.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t1sv_32.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t1sv_4.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t1sv_8.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t2bv_10.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t2bv_16.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t2bv_2.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t2bv_20.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t2bv_25.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t2bv_32.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t2bv_4.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t2bv_5.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t2bv_64.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t2bv_8.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t2fv_10.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t2fv_16.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t2fv_2.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t2fv_20.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t2fv_25.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t2fv_32.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t2fv_4.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t2fv_5.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t2fv_64.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t2fv_8.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t2sv_16.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t2sv_32.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t2sv_4.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t2sv_8.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t3bv_10.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t3bv_16.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t3bv_20.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t3bv_25.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t3bv_32.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t3bv_4.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t3bv_5.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t3bv_8.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t3fv_10.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t3fv_16.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t3fv_20.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t3fv_25.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t3fv_32.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t3fv_4.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t3fv_5.c
    ${PROJECT_SOURCE_DIR}/dft/simd/avx/t3fv_8.c
    ${PROJECT_SOURCE_DIR}/dft/solve.c
    ${PROJECT_SOURCE_DIR}/dft/vrank-geq1.c
    ${PROJECT_SOURCE_DIR}/dft/zero.c
    ${PROJECT_SOURCE_DIR}/kernel/align.c
    ${PROJECT_SOURCE_DIR}/kernel/alloc.c
    ${PROJECT_SOURCE_DIR}/kernel/assert.c
    ${PROJECT_SOURCE_DIR}/kernel/awake.c
    ${PROJECT_SOURCE_DIR}/kernel/buffered.c
    ${PROJECT_SOURCE_DIR}/kernel/cpy1d.c
    ${PROJECT_SOURCE_DIR}/kernel/cpy2d-pair.c
    ${PROJECT_SOURCE_DIR}/kernel/cpy2d.c
    ${PROJECT_SOURCE_DIR}/kernel/ct.c
    ${PROJECT_SOURCE_DIR}/kernel/debug.c
    ${PROJECT_SOURCE_DIR}/kernel/extract-reim.c
    ${PROJECT_SOURCE_DIR}/kernel/hash.c
    ${PROJECT_SOURCE_DIR}/kernel/iabs.c
    ${PROJECT_SOURCE_DIR}/kernel/kalloc.c
    ${PROJECT_SOURCE_DIR}/kernel/md5-1.c
    ${PROJECT_SOURCE_DIR}/kernel/md5.c
    ${PROJECT_SOURCE_DIR}/kernel/minmax.c
    ${PROJECT_SOURCE_DIR}/kernel/ops.c
    ${PROJECT_SOURCE_DIR}/kernel/pickdim.c
    ${PROJECT_SOURCE_DIR}/kernel/plan.c
    ${PROJECT_SOURCE_DIR}/kernel/planner.c
    ${PROJECT_SOURCE_DIR}/kernel/primes.c
    ${PROJECT_SOURCE_DIR}/kernel/print.c
    ${PROJECT_SOURCE_DIR}/kernel/problem.c
    ${PROJECT_SOURCE_DIR}/kernel/rader.c
    ${PROJECT_SOURCE_DIR}/kernel/scan.c
    ${PROJECT_SOURCE_DIR}/kernel/solver.c
    ${PROJECT_SOURCE_DIR}/kernel/solvtab.c
    ${PROJECT_SOURCE_DIR}/kernel/stride.c
    ${PROJECT_SOURCE_DIR}/kernel/tensor.c
    ${PROJECT_SOURCE_DIR}/kernel/tensor1.c
    ${PROJECT_SOURCE_DIR}/kernel/tensor2.c
    ${PROJECT_SOURCE_DIR}/kernel/tensor3.c
    ${PROJECT_SOURCE_DIR}/kernel/tensor4.c
    ${PROJECT_SOURCE_DIR}/kernel/tensor5.c
    ${PROJECT_SOURCE_DIR}/kernel/tensor7.c
    ${PROJECT_SOURCE_DIR}/kernel/tensor8.c
    ${PROJECT_SOURCE_DIR}/kernel/tensor9.c
    ${PROJECT_SOURCE_DIR}/kernel/tile2d.c
    ${PROJECT_SOURCE_DIR}/kernel/timer.c
    ${PROJECT_SOURCE_DIR}/kernel/transpose.c
    ${PROJECT_SOURCE_DIR}/kernel/trig.c
    ${PROJECT_SOURCE_DIR}/kernel/twiddle.c
    ${PROJECT_SOURCE_DIR}/rdft/buffered.c
    ${PROJECT_SOURCE_DIR}/rdft/buffered2.c
    ${PROJECT_SOURCE_DIR}/rdft/conf.c
    ${PROJECT_SOURCE_DIR}/rdft/ct-hc2c-direct.c
    ${PROJECT_SOURCE_DIR}/rdft/ct-hc2c.c
    ${PROJECT_SOURCE_DIR}/rdft/dft-r2hc.c
    ${PROJECT_SOURCE_DIR}/rdft/dht-r2hc.c
    ${PROJECT_SOURCE_DIR}/rdft/dht-rader.c
    ${PROJECT_SOURCE_DIR}/rdft/direct-r2c.c
    ${PROJECT_SOURCE_DIR}/rdft/direct-r2r.c
    ${PROJECT_SOURCE_DIR}/rdft/direct2.c
    ${PROJECT_SOURCE_DIR}/rdft/generic.c
    ${PROJECT_SOURCE_DIR}/rdft/hc2hc-direct.c
    ${PROJECT_SOURCE_DIR}/rdft/hc2hc-generic.c
    ${PROJECT_SOURCE_DIR}/rdft/hc2hc.c
    ${PROJECT_SOURCE_DIR}/rdft/indirect.c
    ${PROJECT_SOURCE_DIR}/rdft/khc2c.c
    ${PROJECT_SOURCE_DIR}/rdft/khc2hc.c
    ${PROJECT_SOURCE_DIR}/rdft/kr2c.c
    ${PROJECT_SOURCE_DIR}/rdft/kr2r.c
    ${PROJECT_SOURCE_DIR}/rdft/nop.c
    ${PROJECT_SOURCE_DIR}/rdft/nop2.c
    ${PROJECT_SOURCE_DIR}/rdft/plan.c
    ${PROJECT_SOURCE_DIR}/rdft/plan2.c
    ${PROJECT_SOURCE_DIR}/rdft/problem.c
    ${PROJECT_SOURCE_DIR}/rdft/problem2.c
    ${PROJECT_SOURCE_DIR}/rdft/rank-geq2-rdft2.c
    ${PROJECT_SOURCE_DIR}/rdft/rank-geq2.c
    ${PROJECT_SOURCE_DIR}/rdft/rank0-rdft2.c
    ${PROJECT_SOURCE_DIR}/rdft/rank0.c
    ${PROJECT_SOURCE_DIR}/rdft/rdft-dht.c
    ${PROJECT_SOURCE_DIR}/rdft/rdft2-inplace-strides.c
    ${PROJECT_SOURCE_DIR}/rdft/rdft2-rdft.c
    ${PROJECT_SOURCE_DIR}/rdft/rdft2-strides.c
    ${PROJECT_SOURCE_DIR}/rdft/rdft2-tensor-max-index.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/hc2c.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/hfb.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2c.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/codlist.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/hb2_16.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/hb2_20.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/hb2_25.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/hb2_32.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/hb2_4.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/hb2_5.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/hb2_8.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/hb_10.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/hb_12.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/hb_15.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/hb_16.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/hb_2.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/hb_20.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/hb_25.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/hb_3.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/hb_32.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/hb_4.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/hb_5.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/hb_6.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/hb_64.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/hb_7.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/hb_8.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/hb_9.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/hc2cb2_16.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/hc2cb2_20.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/hc2cb2_32.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/hc2cb2_4.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/hc2cb2_8.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/hc2cbdft2_16.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/hc2cbdft2_20.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/hc2cbdft2_32.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/hc2cbdft2_4.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/hc2cbdft2_8.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/hc2cbdft_10.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/hc2cbdft_12.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/hc2cbdft_16.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/hc2cbdft_2.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/hc2cbdft_20.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/hc2cbdft_32.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/hc2cbdft_4.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/hc2cbdft_6.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/hc2cbdft_8.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/hc2cb_10.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/hc2cb_12.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/hc2cb_16.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/hc2cb_2.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/hc2cb_20.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/hc2cb_32.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/hc2cb_4.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/hc2cb_6.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/hc2cb_8.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/r2cbIII_10.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/r2cbIII_12.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/r2cbIII_15.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/r2cbIII_16.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/r2cbIII_2.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/r2cbIII_20.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/r2cbIII_25.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/r2cbIII_3.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/r2cbIII_32.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/r2cbIII_4.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/r2cbIII_5.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/r2cbIII_6.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/r2cbIII_64.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/r2cbIII_7.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/r2cbIII_8.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/r2cbIII_9.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/r2cb_10.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/r2cb_11.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/r2cb_12.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/r2cb_128.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/r2cb_13.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/r2cb_14.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/r2cb_15.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/r2cb_16.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/r2cb_2.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/r2cb_20.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/r2cb_25.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/r2cb_3.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/r2cb_32.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/r2cb_4.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/r2cb_5.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/r2cb_6.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/r2cb_64.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/r2cb_7.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/r2cb_8.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cb/r2cb_9.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/codlist.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/hc2cf2_16.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/hc2cf2_20.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/hc2cf2_32.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/hc2cf2_4.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/hc2cf2_8.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/hc2cfdft2_16.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/hc2cfdft2_20.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/hc2cfdft2_32.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/hc2cfdft2_4.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/hc2cfdft2_8.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/hc2cfdft_10.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/hc2cfdft_12.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/hc2cfdft_16.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/hc2cfdft_2.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/hc2cfdft_20.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/hc2cfdft_32.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/hc2cfdft_4.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/hc2cfdft_6.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/hc2cfdft_8.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/hc2cf_10.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/hc2cf_12.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/hc2cf_16.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/hc2cf_2.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/hc2cf_20.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/hc2cf_32.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/hc2cf_4.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/hc2cf_6.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/hc2cf_8.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/hf2_16.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/hf2_20.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/hf2_25.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/hf2_32.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/hf2_4.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/hf2_5.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/hf2_8.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/hf_10.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/hf_12.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/hf_15.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/hf_16.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/hf_2.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/hf_20.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/hf_25.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/hf_3.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/hf_32.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/hf_4.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/hf_5.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/hf_6.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/hf_64.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/hf_7.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/hf_8.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/hf_9.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/r2cfII_10.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/r2cfII_12.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/r2cfII_15.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/r2cfII_16.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/r2cfII_2.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/r2cfII_20.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/r2cfII_25.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/r2cfII_3.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/r2cfII_32.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/r2cfII_4.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/r2cfII_5.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/r2cfII_6.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/r2cfII_64.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/r2cfII_7.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/r2cfII_8.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/r2cfII_9.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/r2cf_10.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/r2cf_11.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/r2cf_12.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/r2cf_128.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/r2cf_13.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/r2cf_14.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/r2cf_15.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/r2cf_16.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/r2cf_2.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/r2cf_20.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/r2cf_25.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/r2cf_3.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/r2cf_32.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/r2cf_4.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/r2cf_5.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/r2cf_6.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/r2cf_64.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/r2cf_7.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/r2cf_8.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2cf/r2cf_9.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2r.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2r/codlist.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2r/e01_8.c
    ${PROJECT_SOURCE_DIR}/rdft/scalar/r2r/e10_8.c
    ${PROJECT_SOURCE_DIR}/rdft/simd/avx/codlist.c
    ${PROJECT_SOURCE_DIR}/rdft/simd/avx/genus.c
    ${PROJECT_SOURCE_DIR}/rdft/simd/avx/hc2cbdftv_10.c
    ${PROJECT_SOURCE_DIR}/rdft/simd/avx/hc2cbdftv_12.c
    ${PROJECT_SOURCE_DIR}/rdft/simd/avx/hc2cbdftv_16.c
    ${PROJECT_SOURCE_DIR}/rdft/simd/avx/hc2cbdftv_2.c
    ${PROJECT_SOURCE_DIR}/rdft/simd/avx/hc2cbdftv_20.c
    ${PROJECT_SOURCE_DIR}/rdft/simd/avx/hc2cbdftv_32.c
    ${PROJECT_SOURCE_DIR}/rdft/simd/avx/hc2cbdftv_4.c
    ${PROJECT_SOURCE_DIR}/rdft/simd/avx/hc2cbdftv_6.c
    ${PROJECT_SOURCE_DIR}/rdft/simd/avx/hc2cbdftv_8.c
    ${PROJECT_SOURCE_DIR}/rdft/simd/avx/hc2cfdftv_10.c
    ${PROJECT_SOURCE_DIR}/rdft/simd/avx/hc2cfdftv_12.c
    ${PROJECT_SOURCE_DIR}/rdft/simd/avx/hc2cfdftv_16.c
    ${PROJECT_SOURCE_DIR}/rdft/simd/avx/hc2cfdftv_2.c
    ${PROJECT_SOURCE_DIR}/rdft/simd/avx/hc2cfdftv_20.c
    ${PROJECT_SOURCE_DIR}/rdft/simd/avx/hc2cfdftv_32.c
    ${PROJECT_SOURCE_DIR}/rdft/simd/avx/hc2cfdftv_4.c
    ${PROJECT_SOURCE_DIR}/rdft/simd/avx/hc2cfdftv_6.c
    ${PROJECT_SOURCE_DIR}/rdft/simd/avx/hc2cfdftv_8.c
    ${PROJECT_SOURCE_DIR}/rdft/solve.c
    ${PROJECT_SOURCE_DIR}/rdft/solve2.c
    ${PROJECT_SOURCE_DIR}/rdft/vrank-geq1-rdft2.c
    ${PROJECT_SOURCE_DIR}/rdft/vrank-geq1.c
    ${PROJECT_SOURCE_DIR}/rdft/vrank3-transpose.c
    ${PROJECT_SOURCE_DIR}/reodft/conf.c
    ${PROJECT_SOURCE_DIR}/reodft/redft00e-r2hc-pad.c
    ${PROJECT_SOURCE_DIR}/reodft/redft00e-r2hc.c
    ${PROJECT_SOURCE_DIR}/reodft/reodft00e-splitradix.c
    ${PROJECT_SOURCE_DIR}/reodft/reodft010e-r2hc.c
    ${PROJECT_SOURCE_DIR}/reodft/reodft11e-r2hc-odd.c
    ${PROJECT_SOURCE_DIR}/reodft/reodft11e-r2hc.c
    ${PROJECT_SOURCE_DIR}/reodft/reodft11e-radix2.c
    ${PROJECT_SOURCE_DIR}/reodft/rodft00e-r2hc-pad.c
    ${PROJECT_SOURCE_DIR}/reodft/rodft00e-r2hc.c
    ${PROJECT_SOURCE_DIR}/simd-support/avx.c
    ${PROJECT_SOURCE_DIR}/simd-support/sse2-nonportable.c
    ${PROJECT_SOURCE_DIR}/simd-support/sse2.c
    ${PROJECT_SOURCE_DIR}/simd-support/taint.c
    ${PROJECT_SOURCE_DIR}/threads/api.c
    ${PROJECT_SOURCE_DIR}/threads/conf.c
    ${PROJECT_SOURCE_DIR}/threads/ct.c
    ${PROJECT_SOURCE_DIR}/threads/dft-vrank-geq1.c
    ${PROJECT_SOURCE_DIR}/threads/f77api.c
    ${PROJECT_SOURCE_DIR}/threads/hc2hc.c
    ${PROJECT_SOURCE_DIR}/threads/rdft-vrank-geq1.c
    ${PROJECT_SOURCE_DIR}/threads/threads.c
    ${PROJECT_SOURCE_DIR}/threads/vrank-geq1-rdft2.c
)

ADD_LIBRARY(libfftw-${FFTW_VERSION} SHARED ${SOURCES})

ADD_LIBRARY(libfftwf-${FFTW_VERSION} SHARED ${SOURCES})
set_target_properties(libfftwf-${FFTW_VERSION} PROPERTIES
                      COMPILE_DEFINITIONS "BENCHFFT_SINGLE=1;FFTW_SINGLE=1")

INSTALL(FILES ${PROJECT_SOURCE_DIR}/api/fftw3.h
        DESTINATION include)

INSTALL(TARGETS libfftw-${FFTW_VERSION} libfftwf-${FFTW_VERSION}
        RUNTIME DESTINATION bin
        LIBRARY DESTINATION lib
        ARCHIVE DESTINATION lib)
